[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/itens/TimePotion.gd" type="Script" id=1]

[node name="TimePotion" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="TimerCD" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="TimerCD" to="." method="_on_TimerCD_timeout"]


